# PubChemScraper

./: .gitignore  README.md  gen_data.ipynb  pyproject.toml  scrape.py
data/: headings.json  prompt.md
pubchem_scraper/: augment.py  datatypes.py  pubchem_schema.py
