[project]
name = "pubchem_scraper"
version = "0.1.0"
description = "A project for scraping data from PubChem"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Haydn Jones", email = "haydnjonest@gmail.com" }]
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "polars>=1.22.0",
    "pydantic>=2.10.6",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "FURB"]
ignore = ["B905"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
